--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /130
-title: "React Hebdo #130: Next.js, callback ref, Zod, React-Hook-Form, mdxjs-rs, Tamagui, Skia, Shopify, Solid, Bun..."
+title: "React Hebdo #130: Next.js, callback ref, Zod, React-Hook-Form, Redux, mdxjs-rs, Tamagui, Skia, Shopify, Solid, Bun..."
 authors: [slorber]
 date: 01-03-2023
 image: /img/TWIR_POST.png
@@ -64,8 +64,8 @@ Une version mineure avec pas mal d'améliorations:
 
 ---
 
-- 📖 Beta docs: [useEffectEvent](https://beta.reactjs.org/learn/separating-events-from-effects#declaring-an-effect-event)
-- 📖 Redux docs: [Side Effects Approaches](https://twitter.com/acemarke/status/1607869290715222016)
+- 📖 Beta docs [useEffectEvent](https://beta.reactjs.org/learn/separating-events-from-effects#declaring-an-effect-event): mise à jour suite au renommage du hook. Le [nouveau site arrive en janvier](https://twitter.com/dan_abramov/status/1606646280649904131)!
+- 📖 Redux docs: [Side Effects Approaches](https://twitter.com/acemarke/status/1607869290715222016): nouvelle page de doc avec des recommendations et comparaison entre thunks, sagas, observables, listeners, RTQ Query...
 - 📜 [React ref Callback Use–Cases](https://julesblom.com/writing/ref-callback-use-cases): article très complet sur les callback refs qui permettent de déclencher des side-effects associés à un élément DOM. Jules présente de nombreux cas d'utilisation: portals, mesurer un élément DOM...
 - 📜 [The Ultimate Form Abstraction](https://www.brendonovich.dev/blog/the-ultimate-form-abstraction): utilise React-Hook-Form avec un résolver Zod. Utiliser la toute nouvelle feature Zod: type coercion pour les inputs number. Construit progressivement une abstraction de formulaire avec une bonne DX et typesafe.
 - 📜 [A React Developer’s First Take on Solid](https://jakelazaroff.com/words/a-react-developers-first-take-on-solid/): une comparaison intéressante entre Solid et React, puis SolidStart et Next.js/Remix. Jake liste aussi les détails de Solid qu'il a moins aimé.
