--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
@@ -17,7 +17,7 @@ Merci pour votre fidélité et votre contribution à la croissance de ce projet.
 La newsletter est revenue en avance: j'ai décalé ma semaine de ski, car il n'y a pas beaucoup de neige 😅
 Prochaine édition le 17 Janvier.
 
-Oh, et j'ai enfin réussi a créer un [meme viral](https://twitter.com/sebastienlorber/status/1610243388174991360) 🤭
+Oh, et j'ai enfin réussi a créer un [meme viral](https://twitter.com/sebastienlorber/status/1610243388174991360) 🥲
 
 <!-- truncate -->
 
