--- a/website/newsletter/131/index.mdx
+++ b/website/newsletter/131/index.mdx
@@ -1,8 +1,8 @@
 ---
 slug: /131
-title: "This Week In React #ISSUENUMBER: ..."
+title: "This Week In React #131: ..."
 authors: [slorber]
-date: 01-16-2023
+date: 01-17-2023
 image: /img/TWIR_POST.png
 unlisted: true
 ---
