--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
@@ -9,7 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+https://compagnon.artisandeveloppeur.fr/veille/podcast-ma-vie-de-freelance-et-infopreneur-avec-sebastien-lorber
+
+N'oubliez pas de répondre au sondage [State of React-Native](https://survey.stateofreactnative.com/)
 
 <!-- truncate -->
 
@@ -41,7 +43,47 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Data Binding in React](https://www.joshwcomeau.com/react/data-binding/)
+
+https://twitter.com/JoshWComeau/status/1613586555238584329
+
+---
+
+[A Cure for useState Hell](https://www.builder.io/blog/use-reducer)
+
+https://twitter.com/Steve8708/status/1613549727366393856
+
+---
+
+- 📜 [Why You Should Use a React Framework](https://leerob.substack.com/p/react-frameworks)
+- 📜 [Excalidraw - Rethinking the Component API](https://blog.excalidraw.com/redesigning-editor-api/)
+- 📜 [Storybook Ecosystem CI](https://storybook.js.org/blog/storybook-ecosystem-ci/) + https://twitter.com/storybookjs/status/1613563751529336834
+- 📜 [Little React Things: React applications are functions](https://www.zekehernandez.com/posts/react-applications-are-functions)
+- 📜 [How We Rebuilt React DevTools with Replay Routines](https://blog.replay.io/how-we-rebuilt-react-devtools-with-replay-routines)
+- 📜 [Async React with NextJS 13](https://swizec.com/blog/async-react-with-nextjs-13/)
+- 📜 [How to debounce and throttle in React without losing your mind](https://www.developerway.com/posts/debouncing-in-react)
+- 📜 [Optimizing React performance without refs and memo](https://alexsidorenko.com/blog/react-optimize-rerenders-without-refs-memo/)
+- 📜 [Why Vercel OG Is Amazing and How to Use It](https://www.flavienbonvin.com/why-vercel-og-is-amazing-and-how-to-use-it/)
+- 📜 [Type-safe React Query](https://tkdodo.eu/blog/type-safe-react-query) https://twitter.com/TkDodo/status/1611807777592119297
+- 📜 [Future of Storybook in 2023](https://storybook.js.org/blog/future-of-storybook-in-2023/) https://twitter.com/storybookjs/status/1611048698791739392
+- 📜 [Building a fast, animated image gallery with Next.js](https://vercel.com/blog/building-a-fast-animated-image-gallery-with-next-js)
+- 📜 [React, Vite and TypeScript: Get started in under 2 minutes](https://blog.nrwl.io/react-vite-and-typescript-get-started-in-under-2-minutes-3bd5cd836175)
+- 📜 [tRPC - TypeScript performance lessons while refactoring for v10](https://trpc.io/blog/typescript-performance-lessons)
+- 🧑‍🎓 [New official Relay tutorial](https://twitter.com/RelayFramework/status/1611424289068314625)
+- 🧑‍🎓 [Microfrontend.dev](https://microfrontend.dev/): resource complete avec quelques parties liées à React
+- 🎥 [Blazing Fast Tips: React & TypeScript](https://www.youtube.com/watch?v=37PafxU_uzQ)
+- 👀 [Remix + Vanilla Extract PR - merged](https://github.com/remix-run/remix/pull/5040)
+- 🐦 [Solid in React](https://twitter.com/RyanCarniato/status/1611448920521179136)
+- 📦 [create-react-signals](https://github.com/dai-shi/create-react-signals)
+- 📦 [Mutative](https://github.com/unadlib/mutative) + [Structura.js](https://giusepperaso.github.io/structura.js): 2 nouvelles alternative plus rapide à Immer pour les updates immuables?
+- 📦 [Create-Universal-App](https://github.com/chen-rn/CUA)
+- 📦 [Chakra UI FigPilot](https://twitter.com/chakra_ui/status/1613267652717191191)
+- 📦 [Inertia 1.0](https://twitter.com/inertiajs/status/1614295060610437123)
+- 📦 [Precedent - Building blocks for Next.js](https://twitter.com/steventey/status/1613928948915920896)
+- 📦 [Next.js 13.1.2](https://twitter.com/nextjs/status/1613910922128416768)
+- 📦 [Remix 1.10](https://github.com/remix-run/remix/releases/tag/remix%401.10.0)
+- 📦 [Visx 3.0](https://github.com/airbnb/visx/releases/tag/v3.0.0)
+- 📦 [MDX extension for VSCode 1.1](https://twitter.com/remcohaszing/status/1613910319805382657): support expérimental intellisense
 
 <SubscribeFormEmbed />
 
@@ -65,7 +107,29 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+**[React Native 0.71: TypeScript by Default, Flexbox Gap, and more...](https://reactnative.dev/blog/2023/01/12/version-071)**
+
+https://twitter.com/reactnative/status/1613584810223570952
+
+---
+
+**Expo Updates**
+
+- [Expo - Announcing General Availability of M1 workers on EAS Build](https://blog.expo.dev/m1-workers-on-eas-build-dcaa2c1333ad) + https://twitter.com/expo/status/1613271619648262144 + https://twitter.com/Baconbrix/status/1613283394145906688
+- [Expo - Testing React Native from the nightly builds](https://blog.expo.dev/testing-react-native-from-the-nightly-builds-ee54ad0c9830)
+- [Expo - Classic Build service no longer supported](https://blog.expo.dev/classic-build-service-no-longer-supported-73c82b500f56)
+- [Expo - An Implementation Change to Expo Push Notification Service for Android Notifications](https://blog.expo.dev/an-implementation-change-to-expo-push-notification-service-for-android-notifications-ede056189e33)
+
+---
+
+- 📊 [State of React-Native](https://survey.stateofreactnative.com/): le sondage ferme vendredi, n'oubliez pas de répondre!
+- 💬 [Android Prebuilts on Maven Central](https://github.com/reactwg/react-native-new-architecture/discussions/105)
+- 📖 [Callstack - The Ultimate Guide to React Native Optimization](https://www.callstack.com/campaigns/download-the-ultimate-guide-to-react-native-optimization)
+- 🐦 ["In Metro v74, bundling React Native is now ~10% faster"](https://twitter.com/Baconbrix/status/1613899384504127488)
+- 🎨 [Multiple iOS windows demo](https://twitter.com/jpdriver/status/1612265133497282561)
+- 📦 [React-Native-OpenAI-JSX](https://github.com/cawfree/react-native-openai-jsx)
+- 🎥 [Skia Shaders and the SDF of a Line](https://www.youtube.com/watch?v=KgJUNYS7ZnA)
+- 🧑‍🎓 [React-Native 10x Faster](https://react-native-10x-faster.com/)
 
 ---
 
@@ -85,22 +149,50 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 🎥 [Les règles essentielles pour les hooks](https://www.youtube.com/watch?v=rLYtXmIjHdA)
+- 🎥 [Le guide complet useContext](https://www.youtube.com/watch?v=V13h-VKpB7Y)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [State of JS 2022 Result](https://2022.stateofjs.com/)
+- [2022 JavaScript Rising Stars](https://risingstars.js.org/)
+- [Turborepo 1.7](https://turbo.build/blog/turbo-1-7-0) + https://twitter.com/turborepo/status/1613604247848771586
+- [Speeding up the JavaScript ecosystem - module resolution](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-2/)
+- [Fixing a Memory Leak in a Production Node.js App](https://kentcdodds.com/blog/fixing-a-memory-leak-in-a-production-node-js-app)
+- [New in Chrome 109](https://developer.chrome.com/blog/new-in-chrome-109/) + [Chrome 110 Beta](https://developer.chrome.com/blog/chrome-110-beta/)
+- [Our top Core Web Vitals recommendations for 2023](https://web.dev/top-cwv-2023/)
+- [Structure of a TypeScript Error](https://www.totaltypescript.com/structure-of-a-typescript-error)
+- [Mental Model for TypeScript Generics](https://www.totaltypescript.com/mental-model-for-typescript-generics)
+- [The gotcha of unhandled promise rejections](https://jakearchibald.com/2023/unhandled-rejections/)
+- [Shopify - From Ruby to Node: Overhauling Shopify’s CLI for a Better Developer Experience](https://shopify.engineering/overhauling-shopify-cli-for-a-better-developer-experience)
+- [Conditional CSS](https://ishadeed.com/article/conditional-css/)
+- [NPM Kiosk - A new way to sell NPM packages](https://npm-kiosk.remotion.dev/)
+- [Lightning CSS visitor API](https://twitter.com/devongovett/status/1610683620255043591)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/fireship_dev/status/1615012746172727300
+
+https://twitter.com/jaredpalmer/status/1614367816634798085
+
+https://twitter.com/t3dotgg/status/1614125827054260224
+
+https://twitter.com/mattpocockuk/status/1613870810556682240
+
+https://twitter.com/trashh_dev/status/1613197206428987398
+
+https://twitter.com/t3dotgg/status/1612980211393638401
+
+https://twitter.com/nikitonsky/status/1612507165977198592
+
+https://twitter.com/laurieontech/status/1610714911835066369
+
+https://twitter.com/sebastienlorber/status/1610685096566165526
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
