--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
@@ -71,7 +71,9 @@ https://twitter.com/Steve8708/status/1613549727366393856
 - 📜 [tRPC - TypeScript performance lessons while refactoring for v10](https://trpc.io/blog/typescript-performance-lessons)
 - 🧑‍🎓 [New official Relay tutorial](https://twitter.com/RelayFramework/status/1611424289068314625)
 - 🧑‍🎓 [Microfrontend.dev](https://microfrontend.dev/): resource complete avec quelques parties liées à React
+- 🎥 [Did NextJS 13 Break State Management?](https://www.youtube.com/watch?v=OpMAH2hzKi8)
 - 🎥 [Blazing Fast Tips: React & TypeScript](https://www.youtube.com/watch?v=37PafxU_uzQ)
+- 🎥 [Is it Too Late To Learn React?](https://www.youtube.com/watch?v=WByOlXWrGaY)
 - 👀 [Remix + Vanilla Extract PR - merged](https://github.com/remix-run/remix/pull/5040)
 - 🐦 [Solid in React](https://twitter.com/RyanCarniato/status/1611448920521179136)
 - 📦 [create-react-signals](https://github.com/dai-shi/create-react-signals)
@@ -109,21 +111,27 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 **[React Native 0.71: TypeScript by Default, Flexbox Gap, and more...](https://reactnative.dev/blog/2023/01/12/version-071)**
 
+- TypeScript par défaut
+- Support flex gap: en pixels, le support des pourcentages arrive plus tard
+- Nouvelles props inspirés du web (accessibilité, style, events) qui devrait simplifier le dev cross-platform.
+- DX améliorée: DevTools click-to-inspect, nouvelle version Hermes, nouvelle architecture...
+- [Android Prebuilts on Maven Central](https://github.com/reactwg/react-native-new-architecture/discussions/105): temps de build Android réduit de 94%, et divers autres impacts.
+
 https://twitter.com/reactnative/status/1613584810223570952
 
 ---
 
-**Expo Updates**
+**Plusieurs news Expo**:
 
-- [Expo - Announcing General Availability of M1 workers on EAS Build](https://blog.expo.dev/m1-workers-on-eas-build-dcaa2c1333ad) + https://twitter.com/expo/status/1613271619648262144 + https://twitter.com/Baconbrix/status/1613283394145906688
-- [Expo - Testing React Native from the nightly builds](https://blog.expo.dev/testing-react-native-from-the-nightly-builds-ee54ad0c9830)
-- [Expo - Classic Build service no longer supported](https://blog.expo.dev/classic-build-service-no-longer-supported-73c82b500f56)
-- [Expo - An Implementation Change to Expo Push Notification Service for Android Notifications](https://blog.expo.dev/an-implementation-change-to-expo-push-notification-service-for-android-notifications-ede056189e33)
+- 👀 Le SDK 48 devrait arriver fin Février.
+- 📜 [Announcing General Availability of M1 workers on EAS Build](https://blog.expo.dev/m1-workers-on-eas-build-dcaa2c1333ad): le worker M1 réduit le temps de build iOS de -40% sur EAS et sera bientôt le worker par défaut.
+- 📜 [An Implementation Change to Expo Push Notification Service for Android Notifications](https://blog.expo.dev/an-implementation-change-to-expo-push-notification-service-for-android-notifications-ede056189e33): l'API Expo ne vous dira plus si le push a bien été reçu par APNS ou FCM.
+- 📜 [Testing React Native from the nightly builds](https://blog.expo.dev/testing-react-native-from-the-nightly-builds-ee54ad0c9830): Expo utilise la version en cours de dev de React-Native pour detecter les problèmes au plus vite.
+- 📜 [Classic Build service no longer supported](https://blog.expo.dev/classic-build-service-no-longer-supported-73c82b500f56): il faut passer à EAS ou builder soi-même avec turtle-cli.
 
 ---
 
 - 📊 [State of React-Native](https://survey.stateofreactnative.com/): le sondage ferme vendredi, n'oubliez pas de répondre!
-- 💬 [Android Prebuilts on Maven Central](https://github.com/reactwg/react-native-new-architecture/discussions/105)
 - 📖 [Callstack - The Ultimate Guide to React Native Optimization](https://www.callstack.com/campaigns/download-the-ultimate-guide-to-react-native-optimization)
 - 🐦 ["In Metro v74, bundling React Native is now ~10% faster"](https://twitter.com/Baconbrix/status/1613899384504127488)
 - 🎨 [Multiple iOS windows demo](https://twitter.com/jpdriver/status/1612265133497282561)
