--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
@@ -9,9 +9,15 @@ unlisted: true
 
 Salut à tous !
 
-https://compagnon.artisandeveloppeur.fr/veille/podcast-ma-vie-de-freelance-et-infopreneur-avec-sebastien-lorber
+On sort progressivement de la période de fêtes. Il y a pas mal de blog posts; mais pas d'annonces majeures en dehors de React-Native 0.71.
 
-N'oubliez pas de répondre au sondage [State of React-Native](https://survey.stateofreactnative.com/)
+Je rentre de vacances au ski et reprends la newsletter sur le rythme hebdomadaire. J'ai pas tout suivi mais je crois que le drama Twitter de la semaine était sur Tailwind? 😅
+
+Plus que 2 jours pour répondre au sondage [State of React-Native](https://survey.stateofreactnative.com/) 🙏
+
+J'ai été l'invité du podcast Artisan Développeur, l'épisode vient juste de sortir: **[Ma vie de freelance et infopreneur](https://compagnon.artisandeveloppeur.fr/veille/podcast-ma-vie-de-freelance-et-infopreneur-avec-sebastien-lorber)**. Si vous êtes curieux d'en savoir plus sur mon activité, on y parle surtout de freelancing, de Docusaurus et de cette newsletter.
+
+Je vous propose aussi de découvrir la nouvelle [newsletter Web Game Dev](https://www.webgamedev.com/newsletter). Elle fera sans doute un meilleur travail que moi pour vous tenir informer sur le dev web créatif, y compris tout ce qui touche à React-Three-Fiber.
 
 <!-- truncate -->
 
@@ -43,49 +49,54 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
-[Data Binding in React](https://www.joshwcomeau.com/react/data-binding/)
+[![useReducer](/emails/issues/131/useReducer.jpg)](https://www.builder.io/blog/use-reducer)
 
-https://twitter.com/JoshWComeau/status/1613586555238584329
+**[A Cure for useState Hell](https://www.builder.io/blog/use-reducer)**
 
----
-
-[A Cure for useState Hell](https://www.builder.io/blog/use-reducer)
-
-https://twitter.com/Steve8708/status/1613549727366393856
+Propose de remplacer plusieurs `useState` par un `useReducer` avec une seule action. Il explique les avantages que cela apporte, comme la possibilité de s'assurer que l'état est consistant, ou de migrer plus tard vers un reducer avec plusieurs actions. Un pattern intéressant à connaitre. Mon avis: il est tout a fait possible d'obtenir des bénéfices similaires en utilisant un seul `useState` avec un objet unique et un hook custom. `useState` ou `useReducer` devrait être un détail d'implémentation.
 
 ---
 
-- 📜 [Why You Should Use a React Framework](https://leerob.substack.com/p/react-frameworks)
-- 📜 [Excalidraw - Rethinking the Component API](https://blog.excalidraw.com/redesigning-editor-api/)
-- 📜 [Storybook Ecosystem CI](https://storybook.js.org/blog/storybook-ecosystem-ci/) + https://twitter.com/storybookjs/status/1613563751529336834
-- 📜 [Little React Things: React applications are functions](https://www.zekehernandez.com/posts/react-applications-are-functions)
-- 📜 [How We Rebuilt React DevTools with Replay Routines](https://blog.replay.io/how-we-rebuilt-react-devtools-with-replay-routines)
-- 📜 [Async React with NextJS 13](https://swizec.com/blog/async-react-with-nextjs-13/)
-- 📜 [How to debounce and throttle in React without losing your mind](https://www.developerway.com/posts/debouncing-in-react)
-- 📜 [Optimizing React performance without refs and memo](https://alexsidorenko.com/blog/react-optimize-rerenders-without-refs-memo/)
-- 📜 [Why Vercel OG Is Amazing and How to Use It](https://www.flavienbonvin.com/why-vercel-og-is-amazing-and-how-to-use-it/)
-- 📜 [Type-safe React Query](https://tkdodo.eu/blog/type-safe-react-query) https://twitter.com/TkDodo/status/1611807777592119297
-- 📜 [Future of Storybook in 2023](https://storybook.js.org/blog/future-of-storybook-in-2023/) https://twitter.com/storybookjs/status/1611048698791739392
+[![useReducer](/emails/issues/131/react-query-ts.jpg)](https://tkdodo.eu/blog/type-safe-react-query)
+
+**[Type-safe React Query](https://tkdodo.eu/blog/type-safe-react-query)**
+
+Avec TypeScript, il vaut mieux éviter de se mentir. Peut-on toujours faire confiance à son backend pour retourner le bon payload. Dominik propose de combiner React-Query à Zod. Avec l'inférence, il n'est plus nécessaire de forcer un type avec `as` ou des generics. On peut utiliser tRPC ou Zodios dans un environnement fullstack (backend/frontend dans le même monorepo).
+
+---
+
+- 📜 [Data Binding in React](https://www.joshwcomeau.com/react/data-binding/): nouvel article interactif de Josh Comeau sur les controlled inputs en React, y compris les subtilités à connaitre sur chaque type d'input, ou encore l'usage d'ids pour l'accessibilité.
+- 📜 [Async React with NextJS 13](https://swizec.com/blog/async-react-with-nextjs-13/): usage de Async Server Components dans une app Next.js 13. Nombreux détails intéressants: error boundaries, fetch étendu par Next.js, React cache...
+- 📜 [How to debounce and throttle in React without losing your mind](https://www.developerway.com/posts/debouncing-in-react): met en évidence qu'il n'est pas si simple d'implémenter soi-même le debouncing en React: fonction debouncée recréée, memoization, stale closure...
+- 📜 [Future of Storybook in 2023](https://storybook.js.org/blog/future-of-storybook-in-2023/): une rétrospective 2022 et ce qu'on peut attendre en 2023: Storybook 7.0, performance, support Turbopack, embeds, testing, amélioration du support React-Native...
+- 📜 [Why You Should Use a React Framework](https://leerob.substack.com/p/react-frameworks): Lee Robinson donne différentes raisons d'utiliser un framework, pour dédier plus de temps au produit. React a évolué, et il ne s'agit plus d'une simple librairie, mais aussi une architecture, une communauté et un écosystème.
+- 📜 [Excalidraw - Rethinking the Component API](https://blog.excalidraw.com/redesigning-editor-api/): explique quelques décisions de design React pour l'éditeur Excalidraw qui retire l'usage de render props.
+- 📜 [Storybook Ecosystem CI](https://storybook.js.org/blog/storybook-ecosystem-ci/): nouveau système qui permet de détecter en avance les regressions liés aux upgrades mineures des dépendances transitives.
+- 📜 [How We Rebuilt React DevTools with Replay Routines](https://blog.replay.io/how-we-rebuilt-react-devtools-with-replay-routines): Mark Erikson va en profondeur sur le fonctionnement des DevTools React, et comment la nouvelle intégration avec le time-travel debugger Replay fonctionne.
+- 📜 [Optimizing React performance without refs and memo](https://alexsidorenko.com/blog/react-optimize-rerenders-without-refs-memo/): propose d'optimiser le re-render en l'isolant dans un composant plus petit.
+- 📜 [Why Vercel OG Is Amazing and How to Use It](https://www.flavienbonvin.com/why-vercel-og-is-amazing-and-how-to-use-it/): utiliser une image meta est important pour le marketing. Présente Vercel OG, est une solution innovante utilisant JSX et Tailwind, facile à intégrer à un projet Next.js déployé sur Vercel.
 - 📜 [Building a fast, animated image gallery with Next.js](https://vercel.com/blog/building-a-fast-animated-image-gallery-with-next-js)
 - 📜 [React, Vite and TypeScript: Get started in under 2 minutes](https://blog.nrwl.io/react-vite-and-typescript-get-started-in-under-2-minutes-3bd5cd836175)
-- 📜 [tRPC - TypeScript performance lessons while refactoring for v10](https://trpc.io/blog/typescript-performance-lessons)
+- 📜 [A guide to streaming SSR with React 18](https://blog.logrocket.com/streaming-ssr-with-react-18/)
+- 📜 [Little React Things: React applications are functions](https://www.zekehernandez.com/posts/react-applications-are-functions)
 - 🧑‍🎓 [New official Relay tutorial](https://twitter.com/RelayFramework/status/1611424289068314625)
-- 🧑‍🎓 [Microfrontend.dev](https://microfrontend.dev/): resource complete avec quelques parties liées à React
+- 👀 [Remix + Vanilla Extract PR - merged](https://github.com/remix-run/remix/pull/5040)
+- 🐦 [Solid in React](https://twitter.com/RyanCarniato/status/1611448920521179136): POC de Ryan Carniato pour intégrer du code SolidJS à une app React
+- 📦 [Remix 1.10](https://github.com/remix-run/remix/releases/tag/remix%401.10.0): la fin officielle du "React-Routering Remix" et pas mal de nouveautés comme de nombreux hooks.
+- 📦 [Visx 3.0](https://github.com/airbnb/visx/releases/tag/v3.0.0): nouvelle version majeure des primitives dataviz de Airbnb, avec quelques breaking changes.
+- 📦 [create-react-signals](https://github.com/dai-shi/create-react-signals): Daishi Kato s'inspire de Preact signals pour créer ce nouveaux bindings reactifs sur Zustand, Valtio et Jotai.
+- 📦 [Mutative](https://github.com/unadlib/mutative) + [Structura.js](https://giusepperaso.github.io/structura.js): 2 nouvelles alternative plus rapide à Immer pour les updates immuables?
+- 📦 [Redux Toolkit 2.0 alpha](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.0.0-alpha.0): donne une idée des premiers breaking changes
+- 📦 [Create-Universal-App](https://github.com/chen-rn/CUA): starter pour créer des apps universelles fullstack (web + mobile): Next.js, Expo, Tamagui, tRPC...
+- 📦 [Chakra UI FigPilot](https://twitter.com/chakra_ui/status/1613267652717191191): pour transformer un design Figma vers du code Chakra UI
+- 📦 [Inertia 1.0](https://twitter.com/inertiajs/status/1614295060610437123): framework PHP avec routing coté serveur qui permet aussi de créer des apps React.
+- 📦 [Precedent](https://twitter.com/steventey/status/1613928948915920896): "Building blocks for Next.js"
+- 📦 [MDX extension for VSCode 1.1](https://twitter.com/remcohaszing/status/1613910319805382657): support expérimental intellisense
+- 📦 [Next.js 13.1.2](https://twitter.com/nextjs/status/1613910922128416768)
+- 📦 [Radix releases - January 17](https://www.radix-ui.com/docs/primitives/overview/releases#january-17-2023)
 - 🎥 [Did NextJS 13 Break State Management?](https://www.youtube.com/watch?v=OpMAH2hzKi8)
 - 🎥 [Blazing Fast Tips: React & TypeScript](https://www.youtube.com/watch?v=37PafxU_uzQ)
 - 🎥 [Is it Too Late To Learn React?](https://www.youtube.com/watch?v=WByOlXWrGaY)
-- 👀 [Remix + Vanilla Extract PR - merged](https://github.com/remix-run/remix/pull/5040)
-- 🐦 [Solid in React](https://twitter.com/RyanCarniato/status/1611448920521179136)
-- 📦 [create-react-signals](https://github.com/dai-shi/create-react-signals)
-- 📦 [Mutative](https://github.com/unadlib/mutative) + [Structura.js](https://giusepperaso.github.io/structura.js): 2 nouvelles alternative plus rapide à Immer pour les updates immuables?
-- 📦 [Create-Universal-App](https://github.com/chen-rn/CUA)
-- 📦 [Chakra UI FigPilot](https://twitter.com/chakra_ui/status/1613267652717191191)
-- 📦 [Inertia 1.0](https://twitter.com/inertiajs/status/1614295060610437123)
-- 📦 [Precedent - Building blocks for Next.js](https://twitter.com/steventey/status/1613928948915920896)
-- 📦 [Next.js 13.1.2](https://twitter.com/nextjs/status/1613910922128416768)
-- 📦 [Remix 1.10](https://github.com/remix-run/remix/releases/tag/remix%401.10.0)
-- 📦 [Visx 3.0](https://github.com/airbnb/visx/releases/tag/v3.0.0)
-- 📦 [MDX extension for VSCode 1.1](https://twitter.com/remcohaszing/status/1613910319805382657): support expérimental intellisense
 
 <SubscribeFormEmbed />
 
@@ -109,19 +120,23 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
+[![useReducer](/emails/issues/131/rn-android-bt.jpg)](https://reactnative.dev/blog/2023/01/12/version-071)
+
 **[React Native 0.71: TypeScript by Default, Flexbox Gap, and more...](https://reactnative.dev/blog/2023/01/12/version-071)**
+
+Une grosse release avec entre autre:
 
 - TypeScript par défaut
 - Support flex gap: en pixels, le support des pourcentages arrive plus tard
 - Nouvelles props inspirés du web (accessibilité, style, events) qui devrait simplifier le dev cross-platform.
 - DX améliorée: DevTools click-to-inspect, nouvelle version Hermes, nouvelle architecture...
-- [Android Prebuilts on Maven Central](https://github.com/reactwg/react-native-new-architecture/discussions/105): temps de build Android réduit de 94%, et divers autres impacts.
-
-https://twitter.com/reactnative/status/1613584810223570952
+- [Android Prebuilts on Maven Central](https://github.com/reactwg/react-native-new-architecture/discussions/105): temps de build Android réduit de 94%, et divers autres impacts. Note: il semble aussi possible d'[améliorer fortement les temps de build iOS](https://twitter.com/Baconbrix/status/1611527618444120065).
 
 ---
 
-**Plusieurs news Expo**:
+[![expo-m1](/emails/issues/131/expo-m1.jpg)](https://blog.expo.dev/m1-workers-on-eas-build-dcaa2c1333ad)
+
+**Divers nouveaux articles sur le blog Expo**:
 
 - 👀 Le SDK 48 devrait arriver fin Février.
 - 📜 [Announcing General Availability of M1 workers on EAS Build](https://blog.expo.dev/m1-workers-on-eas-build-dcaa2c1333ad): le worker M1 réduit le temps de build iOS de -40% sur EAS et sera bientôt le worker par défaut.
@@ -131,7 +146,7 @@ https://twitter.com/reactnative/status/1613584810223570952
 
 ---
 
-- 📊 [State of React-Native](https://survey.stateofreactnative.com/): le sondage ferme vendredi, n'oubliez pas de répondre!
+- 📊 [State of React-Native](https://survey.stateofreactnative.com/): le sondage ferme vendredi, n'oubliez pas de répondre avant!
 - 📖 [Callstack - The Ultimate Guide to React Native Optimization](https://www.callstack.com/campaigns/download-the-ultimate-guide-to-react-native-optimization)
 - 🐦 ["In Metro v74, bundling React Native is now ~10% faster"](https://twitter.com/Baconbrix/status/1613899384504127488)
 - 🎨 [Multiple iOS windows demo](https://twitter.com/jpdriver/status/1612265133497282561)
@@ -168,7 +183,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 - [State of JS 2022 Result](https://2022.stateofjs.com/)
 - [2022 JavaScript Rising Stars](https://risingstars.js.org/)
-- [Turborepo 1.7](https://turbo.build/blog/turbo-1-7-0) + https://twitter.com/turborepo/status/1613604247848771586
+- [Turborepo 1.7](https://turbo.build/blog/turbo-1-7-0)
+- [tRPC - TypeScript performance lessons while refactoring for v10](https://trpc.io/blog/typescript-performance-lessons)
+- [Microfrontend.dev](https://microfrontend.dev/)
 - [Speeding up the JavaScript ecosystem - module resolution](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-2/)
 - [Fixing a Memory Leak in a Production Node.js App](https://kentcdodds.com/blog/fixing-a-memory-leak-in-a-production-node-js-app)
 - [New in Chrome 109](https://developer.chrome.com/blog/new-in-chrome-109/) + [Chrome 110 Beta](https://developer.chrome.com/blog/chrome-110-beta/)
@@ -185,22 +202,4 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/fireship_dev/status/1615012746172727300
-
-https://twitter.com/jaredpalmer/status/1614367816634798085
-
-https://twitter.com/t3dotgg/status/1614125827054260224
-
-https://twitter.com/mattpocockuk/status/1613870810556682240
-
-https://twitter.com/trashh_dev/status/1613197206428987398
-
-https://twitter.com/t3dotgg/status/1612980211393638401
-
-https://twitter.com/nikitonsky/status/1612507165977198592
-
-https://twitter.com/laurieontech/status/1610714911835066369
-
-https://twitter.com/sebastienlorber/status/1610685096566165526
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/131/meme.jpg)](https://twitter.com/t3dotgg/status/1614125827054260224)
