--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/131/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /131
-title: "React Hebdo #131: ..."
+title: "React Hebdo #131: useReducer, Controlled Inputs, Async React, DevTools, React-Query, Storybook, Remix, React-Native, Expo..."
 authors: [slorber]
 date: 01-17-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -17,7 +16,7 @@ Plus que 2 jours pour répondre au sondage [State of React-Native](https://surve
 
 J'ai été l'invité du podcast Artisan Développeur, l'épisode vient juste de sortir: **[Ma vie de freelance et infopreneur](https://compagnon.artisandeveloppeur.fr/veille/podcast-ma-vie-de-freelance-et-infopreneur-avec-sebastien-lorber)**. Si vous êtes curieux d'en savoir plus sur mon activité, on y parle surtout de freelancing, de Docusaurus et de cette newsletter.
 
-Je vous propose aussi de découvrir la nouvelle [newsletter Web Game Dev](https://www.webgamedev.com/newsletter). Elle fera sans doute un meilleur travail que moi pour vous tenir informer sur le dev web créatif, y compris tout ce qui touche à React-Three-Fiber.
+Pour les devs web créatifs intéressés par React-Three-Fiber, abonnez-vous à la newsletter [Web Game Dev](https://www.webgamedev.com/newsletter): vous y trouverez plus d'infos qu'ici.
 
 <!-- truncate -->
 
@@ -193,7 +192,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [Structure of a TypeScript Error](https://www.totaltypescript.com/structure-of-a-typescript-error)
 - [Mental Model for TypeScript Generics](https://www.totaltypescript.com/mental-model-for-typescript-generics)
 - [The gotcha of unhandled promise rejections](https://jakearchibald.com/2023/unhandled-rejections/)
-- [Shopify - From Ruby to Node: Overhauling Shopify’s CLI for a Better Developer Experience](https://shopify.engineering/overhauling-shopify-cli-for-a-better-developer-experience)
+- [From Ruby to Node: Overhauling Shopify’s CLI for a Better Developer Experience](https://shopify.engineering/overhauling-shopify-cli-for-a-better-developer-experience)
 - [Conditional CSS](https://ishadeed.com/article/conditional-css/)
 - [NPM Kiosk - A new way to sell NPM packages](https://npm-kiosk.remotion.dev/)
 - [Lightning CSS visitor API](https://twitter.com/devongovett/status/1610683620255043591)
