improve confirm workflow page copy

--- a/website/i18n/fr/docusaurus-plugin-content-pages/workflow/confirm-your-email.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-pages/workflow/confirm-your-email.mdx
@@ -1,6 +1,8 @@
 # Merci pour ton abonnement !
 
-Merci de confirmer ton adresse email pour valider ton inscription !
+Dans quelques secondes, tu vas **recevoir un email** de ma part pour confirmer ton abonnement.
+
+Merci de **confirmer ton adresse email** pour valider ton inscription !
 
 :::tip Vérifie tes spams
 
