--- a/website/src/pages/workflow/confirm-your-email.mdx
+++ b/website/src/pages/workflow/confirm-your-email.mdx
@@ -1,6 +1,8 @@
 # Thanks for subscribing!
 
-Please confirm your email address to validate your subscription
+In a few seconds, you will **receive an email** from me asking you to confirm your newsletter subscription.
+
+Please open your inbox and **confirm your email address** to finalize your subscription.
 
 :::tip Check your spam folder
 
