--- a/website/newsletter/132/index.mdx
+++ b/website/newsletter/132/index.mdx
@@ -57,7 +57,7 @@ We are excited to collaborate with Strapi, Appwrite, Meilisearch, and Medusa. Th
 
 🧑‍💼 [**Lab - Frontend Developer - Hybird Remote, London**](https://4dayweek.io/remote-job/frontend-developer-lab?utm_source=thisweekinreact)
 
-Join the Riverr agency as a frontend developer, working on client projects using modern technologies, such as React, Next.js, TypeScript. [4/day week](https://4dayweek.io/) job.
+Join the Riverr agency as a frontend developer, working on client projects using modern technologies, such as React, Next.js, TypeScript. A [**4/day week**](https://4dayweek.io/) job.
 
 🧑‍💼 [**TLDR - Senior Software Engineer (Remote, $120k-200k)**](https://tldr.tech/jobs/senior-software-engineer/23?utm_source=thisweekinreact)
 
