--- a/website/newsletter/132/index.mdx
+++ b/website/newsletter/132/index.mdx
@@ -55,9 +55,9 @@ We are excited to collaborate with Strapi, Appwrite, Meilisearch, and Medusa. Th
 
 ## 🧑‍💻 Jobs {#jobs}
 
-🧑‍💼 [**Lab - Frontend Developer - Hybird Remote, London**](https://4dayweek.io/remote-job/frontend-developer-lab?utm_source=thisweekinreact)
+🧑‍💼 [**Lab - Frontend Developer - Hybird Remote, London**](https://4dayweek.io/remote-job/frontend-developer-lab?utm_source=newsletter&utm_medium=newsletter&utm_campaign=weekinreact)
 
-Join the Riverr agency as a frontend developer, working on client projects using modern technologies, such as React, Next.js, TypeScript. A [**4/day week**](https://4dayweek.io/) job.
+Join the Riverr agency as a frontend developer, working on client projects using modern technologies, such as React, Next.js, TypeScript. A [**4/day week**](https://4dayweek.io/?utm_source=newsletter&utm_medium=newsletter&utm_campaign=weekinreact) job.
 
 🧑‍💼 [**TLDR - Senior Software Engineer (Remote, $120k-200k)**](https://tldr.tech/jobs/senior-software-engineer/23?utm_source=thisweekinreact)
 
