--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -52,6 +52,8 @@ https://twitter.com/astrodotbuild/status/1615401112672284672
 
 ---
 
+- [useGlobalState - Sharing state between React components without context or fancy libraries](https://yoavik.com/snippets/use-global-state)
+- [What I Like About Astro](https://www.macarthur.me/posts/what-i-like-about-astro)
 - [The building blocks of great docs](https://www.mux.com/blog/the-building-blocks-of-great-docs) + https://twitter.com/leeerob/status/1616494020384985114
 - [Improving readability with React Wrap Balancer](https://vercel.com/blog/react-wrap-balancer) + https://twitter.com/vercel/status/1616507121935290368
 - [Modals with React Router 6 and Remix](https://dev.to/infoxicator/modals-with-react-router-6-and-remix-1e35)
@@ -101,6 +103,14 @@ Shotgun est la billetterie des évènements electro. Nous recherchons des devs e
 
 Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
 
+🧑‍💼 [**Teale - Mobile Software Engineer - 50-60k - Paris/Remote**](https://sebastienlorber.mylittleteam.com/teale/multifunctional/mobile-software-engineer)
+
+Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une app à fort impact dédiée à la santé mentale.
+
+🧑‍💼 [**Ponicode - Senior Software Enginee - Paris/Full-remote**](https://sebastienlorber.mylittleteam.com/ponicode/multifunctional/senior-software-engineer)
+
+Ponicode (CircleCI) est un partenaire de code basé sur une IA. Ils recrutent un dev senior full-stack React / Node.js / TypeScript.
+
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
 ---
@@ -125,6 +135,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [CSS Nesting - Blink Intent to ship](https://twitter.com/sebastienlorber/status/1617882799100526595)
 - [TypeScript 5.0 PR - Decorators support](https://twitter.com/robpalmer2/status/1616215250055090187)
 - [Bun 0.5](https://bun.sh/blog/bun-v0.5.0)
+- [esbuild 0.17](https://github.com/evanw/esbuild/releases/tag/v0.17.0)
+- [ESLint's 2022 year in review](https://eslint.org/blog/2023/01/eslint-2022-year-review/)
+- [Building and delivering frontends at scale](https://frontendmastery.com/posts/building-and-serving-frontends-at-scale/)
 
 ---
 
