--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -9,10 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-Jason LWJ
-Create and deploy a documentation website - https://www.learnwithjason.dev/create-and-deploy-a-documentation-website
+J'ai été invité du show [Learn With Jason - Create and deploy a documentation website](https://www.learnwithjason.dev/create-and-deploy-a-documentation-website?utm_source=thisweekinreact) dans lequel Jason fait ses premiers pas sur Docusaurus.
 
-ESNext.news
+Cette semaine je vous propose de découvrir la newsletter [ES.next News](http://esnextnews.com/?utm_source=thisweekinreact), une bonne source d'information pour se tenir à jour sur les évolutions du langage JavaScript et des outils comme Bun ou ESLint.
 
 <Todo />
 
@@ -138,6 +137,7 @@ Ponicode (CircleCI) est un partenaire de code basé sur une IA. Ils recrutent un
 - [esbuild 0.17](https://github.com/evanw/esbuild/releases/tag/v0.17.0)
 - [ESLint's 2022 year in review](https://eslint.org/blog/2023/01/eslint-2022-year-review/)
 - [Building and delivering frontends at scale](https://frontendmastery.com/posts/building-and-serving-frontends-at-scale/)
+- [Writing a tiny tRPC client]https://trpc.io/blog/tinyrpc-client)
 
 ---
 
