--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/132/index.mdx
@@ -45,36 +45,47 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 ## ⚛️ React {#react}
 
-**Astro 2.0**
+[![Astro 2.0](/emails/issues/132/astro2.jpg)](https://astro.build/blog/astro-2/)
+
+**[Astro 2.0](https://astro.build/blog/astro-2/)**
 
 https://twitter.com/astrodotbuild/status/1615401112672284672
 
 ---
 
-- [useGlobalState - Sharing state between React components without context or fancy libraries](https://yoavik.com/snippets/use-global-state)
-- [What I Like About Astro](https://www.macarthur.me/posts/what-i-like-about-astro)
-- [The building blocks of great docs](https://www.mux.com/blog/the-building-blocks-of-great-docs) + https://twitter.com/leeerob/status/1616494020384985114
-- [Improving readability with React Wrap Balancer](https://vercel.com/blog/react-wrap-balancer) + https://twitter.com/vercel/status/1616507121935290368
-- [Modals with React Router 6 and Remix](https://dev.to/infoxicator/modals-with-react-router-6-and-remix-1e35)
-- [Why React Router is excellent for Micro-Frontends](https://dev.to/infoxicator/why-react-router-is-excellent-for-micro-frontends-2a21)
-- [Remix 1.11](https://twitter.com/mjackson/status/1615893161540464641) + https://www.youtube.com/watch?v=IKPVSV34slA + https://twitter.com/ryanflorence/status/1616575913612947456
-- Beta docs: ["the main remaining blocker is the landing page which we’re working on now"](https://twitter.com/dan_abramov/status/1617543301477060608)
-- [Things I want to see in JavaScript and Frontend development in 2023](https://paularmstrong.dev/blog/2023/01/20/javascript-and-frontend-things-to-see-in-2023/)
-- [Bright - React Server Component for syntax highlighting](https://github.com/code-hike/bright)
-- [useAsyncEffect: The Missing React Hook](https://marmelab.com/blog/2023/01/11/use-async-effect-react.html)
-- [Test-driven development of NextJS API routes](https://massimilianomirra.com/notes/test-driven-development-of-nextjs-api-routes)
-- [Andrew Clark - "If you use React, you should be using a React framework"](https://twitter.com/acdlite/status/1617611126514266112) + https://twitter.com/ryanflorence/status/1617622937695318017
-- [DevTools - Toggle Suspense boundaries demo](https://twitter.com/delba_oliveira/status/1617205554547683328)
-- [Josh Comeau - Joy of React - Couse launch](https://twitter.com/JoshWComeau/status/1617553220242661377)
-- [Astro 2.0 is Revolutionary!](https://www.youtube.com/watch?v=gi4c7fbeURc)
-- [TanStack Query multi-client sync demo](https://twitter.com/aryan__deora/status/1616097346558754819)
-- [Use Remix as a SPA only](https://sergiodxa.com/articles/use-remix-as-a-spa-only) + https://twitter.com/ryanflorence/status/1616495802024853504
-- [Remix PR - add built-in PostCSS and Tailwind support](https://github.com/remix-run/remix/pull/5229)
-- [XState PR - createProvider](https://twitter.com/DavidKPiano/status/1617537783018422273)
-- [React docs PR - Replace Create React App recommendation with Vite](https://github.com/reactjs/reactjs.org/pull/5487)
-- [Remix Route Convention v2](https://remix.run/docs/en/v1/file-conventions/route-files-v2) + https://twitter.com/ryanflorence/status/1616172173156323329
-- [Lee Robinson - Revisiting my React course 3 years later](https://www.youtube.com/watch?v=DQk0TWmgYXw)
-- [Redwood 4.0 RC](https://twitter.com/RedwoodJS/status/1616002999729389568)
+**[Remix 1.11](https://twitter.com/mjackson/status/1615893161540464641)**
+
+https://www.youtube.com/watch?v=IKPVSV34slA + https://twitter.com/ryanflorence/status/1616575913612947456
+
+---
+
+- 📖 Beta docs: ["the main remaining blocker is the landing page which we’re working on now"](https://twitter.com/dan_abramov/status/1617543301477060608)
+- 📜 [useGlobalState - Sharing state between React components without context or fancy libraries](https://yoavik.com/snippets/use-global-state)
+- 📜 [What I Like About Astro](https://www.macarthur.me/posts/what-i-like-about-astro)
+- 📜 [The building blocks of great docs](https://www.mux.com/blog/the-building-blocks-of-great-docs) + https://twitter.com/leeerob/status/1616494020384985114
+- 📜 [Improving readability with React Wrap Balancer](https://vercel.com/blog/react-wrap-balancer) + https://twitter.com/vercel/status/1616507121935290368
+- 📜 [Modals with React Router 6 and Remix](https://dev.to/infoxicator/modals-with-react-router-6-and-remix-1e35)
+- 📜 [Why React Router is excellent for Micro-Frontends](https://dev.to/infoxicator/why-react-router-is-excellent-for-micro-frontends-2a21)
+- 📜 [Things I want to see in JavaScript and Frontend development in 2023](https://paularmstrong.dev/blog/2023/01/20/javascript-and-frontend-things-to-see-in-2023/)
+- 📜 [useAsyncEffect: The Missing React Hook](https://marmelab.com/blog/2023/01/11/use-async-effect-react.html)
+- 📜 [Test-driven development of NextJS API routes](https://massimilianomirra.com/notes/test-driven-development-of-nextjs-api-routes)
+- 📜 [Use Remix as a SPA only](https://sergiodxa.com/articles/use-remix-as-a-spa-only) + https://twitter.com/ryanflorence/status/1616495802024853504
+- 📜 [How to build a better React map with Pigeon Maps and Mapbox](https://evilmartians.com/chronicles/how-to-build-a-better-react-map-with-pigeon-maps-and-mapbox)
+- 📜 [Refraction, dispersion, and other shader light effects](https://blog.maximeheckel.com/posts/refraction-dispersion-and-other-shader-light-effects/)
+- 🐦 [Andrew Clark - "If you use React, you should be using a React framework"](https://twitter.com/acdlite/status/1617611126514266112) + https://twitter.com/ryanflorence/status/1617622937695318017
+- 🧑‍🎓 [Josh Comeau - Joy of React - Couse launch](https://twitter.com/JoshWComeau/status/1617553220242661377)
+- 🎨 [TanStack Query multi-client sync demo](https://twitter.com/aryan__deora/status/1616097346558754819)
+- 🎨 [DevTools - Toggle Suspense boundaries demo](https://twitter.com/delba_oliveira/status/1617205554547683328)
+- 👀 [Remix PR - add built-in PostCSS and Tailwind support](https://github.com/remix-run/remix/pull/5229)
+- 👀 [XState PR - createProvider](https://twitter.com/DavidKPiano/status/1617537783018422273)
+- 👀 [React docs PR - Replace Create React App recommendation with Vite](https://github.com/reactjs/reactjs.org/pull/5487)
+- 📖 [Remix Route Convention v2](https://remix.run/docs/en/v1/file-conventions/route-files-v2) + https://twitter.com/ryanflorence/status/1616172173156323329
+- 🎥 [Astro 2.0 is Revolutionary!](https://www.youtube.com/watch?v=gi4c7fbeURc)
+- 🎥 [Lee Robinson - Revisiting my React course 3 years later](https://www.youtube.com/watch?v=DQk0TWmgYXw)
+- 📦 [Redwood 4.0 RC](https://twitter.com/RedwoodJS/status/1616002999729389568)
+- 📦 [shadcdn/ui - Beautifully designed components built with Radix UI and Tailwind CSS](https://twitter.com/shadcn/status/1617916719242293248)
+- 📦 [next-mdx-remote 4.3 - Server Components Support (experimental)](https://github.com/hashicorp/next-mdx-remote/releases/tag/v4.3.0)
+- 📦 [Bright - React Server Component for syntax highlighting](https://github.com/code-hike/bright)
 
 <SubscribeFormEmbed />
 
@@ -82,13 +93,28 @@ https://twitter.com/astrodotbuild/status/1615401112672284672
 
 ## 📱 React-Native {#react-native}
 
-- [React-Native-Android-Widget](https://twitter.com/sebastienlorber/status/1616002635873783813)
-- [Maestro Guides - React-Native](https://maestro.mobile.dev/platform-support/react-native) + https://twitter.com/mobile__dev/status/1615767587463520256
-- [Expo-Image in beta](https://twitter.com/JI/status/1616337848558551041)
-- [Expo Router RC](https://twitter.com/Baconbrix/status/1616470622556618752) + https://twitter.com/Baconbrix/status/1616470627300380672
-- [RNR 256 - Expo Router with Evan Bacon](https://reactnativeradio.com/episodes/rnr-256-expo-router-with-evan-bacon)
-- [Metro 0.74](https://github.com/facebook/metro/releases/tag/v0.74.0)
-- [Moti 0.22 - Hermes Support](https://twitter.com/FernandoTheRojo/status/1616583066054545408)
+[![Expo Router RC](/emails/issues/132/expo-router.jpg)](https://blog.expo.dev/announcing-the-expo-router-v1-release-candidate-c5680b88a18c)
+
+**[Expo Router RC](https://blog.expo.dev/announcing-the-expo-router-v1-release-candidate-c5680b88a18c)**
+
+https://twitter.com/Baconbrix/status/1616470622556618752
+
+https://twitter.com/Baconbrix/status/1616470627300380672
+
+---
+
+**[React-Native-Android-Widget](https://saleksovski.github.io/react-native-android-widget/)**
+
+https://twitter.com/sebastienlorber/status/1616002635873783813
+
+---
+
+- 📖 [Maestro Guides - React-Native](https://maestro.mobile.dev/platform-support/react-native) + https://twitter.com/mobile__dev/status/1615767587463520256
+- 👀 [Expo-Image in beta](https://twitter.com/JI/status/1616337848558551041)
+- 🎙️ [RNR 256 - Expo Router with Evan Bacon](https://reactnativeradio.com/episodes/rnr-256-expo-router-with-evan-bacon)
+
+- 📦 [Moti 0.22 - Hermes Support](https://twitter.com/FernandoTheRojo/status/1616583066054545408)
+- 📦 [Metro 0.74](https://github.com/facebook/metro/releases/tag/v0.74.0)
 
 ---
 
